--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -35,6 +35,7 @@
 # MDB
 - include: mdb-create.yml
 - include: mdb-overlay-create.yml
+  with_dict: "{{ slapd_mdb_overlays }}"
   when: "slapd_mdb_overlays is not undefined"
 - include: mdb-overlay-config.yml
   with_dict: "{{ slapd_mdb_overlays }}"
