--- a/tasks/mdb-overlay-config.yml
+++ b/tasks/mdb-overlay-config.yml
@@ -16,10 +16,13 @@
   command: >
     /usr/local/bin/slapd-overlay-olc-attribute-clean "{{ slapd_ldapi_socket | urlencode() | regex_replace('/', '%2F') }}" "{{ slapd_olc_rootdn }}"
     "olcDatabase={2}mdb,cn=config"
-    "{{ item.key }}" "{{ item.value | join('" "') }}"
+    "{{ item.key }}"
+    {% for dict in item.value %}
+    {% for key, value in dict.items() %}
+    "{{ key }}: {{ value }}"
+    {% endfor %}
+    {% endfor %}
   environment:
     bindpw: "{{ slapd_olc_rootdn_password | mandatory }}"
   register: out
   changed_when: "'CHANGED' in out.stdout | default('')"
-  loop_control:
-    loop_var: attr
