--- a/tasks/mdb-overlay-create.yml
+++ b/tasks/mdb-overlay-create.yml
@@ -1,13 +1,15 @@
 ---
-- name: Create MDB Overlays
+- name: Create {{ item.key }} Overlay
   command: >
     /usr/local/bin/slapd-create-overlay "{{ slapd_ldapi_socket | urlencode() | regex_replace('/', '%2F') }}" "{{ slapd_olc_rootdn }}"
     "olcDatabase={2}mdb,cn=config"
-    "{{ item.key }}" "{{ item.value.objectClass }}"
+    "{{ item.key }}"
+    {% for dict in item.value %}
+    {% for key, value in dict.items() %}
+    "{{ key }}: {{ value }}"
+    {% endfor %}
+    {% endfor %}
   environment:
     bindpw: "{{ slapd_olc_rootdn_password | mandatory }}"
   register: out
   changed_when: "'CHANGED' in out.stdout"
-  with_dict: "{{ slapd_mdb_overlays }}"
-  when: "slapd_mdb_overlays is not undefined"
-
